Feature/payment (#12)
* refactor environment variables

* convert file utils to static

* add message to ApiResponse

* update application.properties

* refactor UserRequest

* update booking module migration

* add booking + payment

* add model mapper + refactor code

* remove logging in GlobalExceptionHandler

* add missing file

* Add image list to profile response

* big refactor, don't remember