@@ -1,11 +1,9 @@
 package com.dtu.kolgo.service.impl;
 
-import com.dtu.kolgo.dto.request.EmailRequest;
-import com.dtu.kolgo.dto.request.PasswordUpdateRequest;
-import com.dtu.kolgo.dto.request.UserRequest;
-import com.dtu.kolgo.dto.response.ApiResponse;
-import com.dtu.kolgo.dto.response.UserResponse;
-import com.dtu.kolgo.env.FileEnv;
+import com.dtu.kolgo.dto.EmailDto;
+import com.dtu.kolgo.dto.PasswordUpdateDTO;
+import com.dtu.kolgo.dto.UserDto;
+import com.dtu.kolgo.dto.ApiResponse;
 import com.dtu.kolgo.exception.ExistsException;
 import com.dtu.kolgo.exception.InvalidException;
 import com.dtu.kolgo.exception.NotFoundException;
@@ -15,24 +13,30 @@ import com.dtu.kolgo.service.UserService;
 import com.dtu.kolgo.util.FileUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.security.Principal;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class UserServiceImpl implements UserService {
 
+    @Value("${file.image-path}")
+    private String imagePath;
+
     private final UserRepository repo;
-    private final FileUtils fileUtils;
     private final PasswordEncoder passwordEncoder;
+    private final ModelMapper mapper;
 
     @Override
     public ApiResponse save(User user) {
@@ -41,76 +45,80 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public List<UserResponse> getAllResponses() {
+    public List<UserDto> getAllDto() {
         return repo.findAll().stream()
-                .map(user -> getResponse(user.getId()))
-                .collect(Collectors.toList());
+                .map(user -> mapper.map(user, UserDto.class))
+                .toList();
     }
 
     @Override
-    public User get(int id) {
+    public User getById(int id) {
         return repo.findById(id)
                 .orElseThrow(() -> new NotFoundException("User ID not found: " + id));
     }
 
     @Override
-    public User get(String email) {
+    public UserDto getDtoById(int id) {
+        return mapper.map(getById(id), UserDto.class);
+    }
+
+    @Override
+    public User getByEmail(String email) {
         return repo.findByEmail(email)
                 .orElseThrow(() -> new NotFoundException("Email not found: " + email));
     }
 
     @Override
-    public User get(Principal principal) {
-        return get(principal.getName());
+    public User getByPrincipal(Principal principal) {
+        return getByEmail(principal.getName());
     }
 
     @Override
-    public UserResponse getResponse(int userId) {
-        User user = get(userId);
-        return mapEntityToDto(user);
+    public ApiResponse updateById(int id, UserDto dto) {
+        User user = getById(id);
+        return updateByUser(user, dto);
     }
 
     @Override
-    public ApiResponse update(int userId, UserRequest request) {
-        User user = get(userId);
-        updateAvatar(user, request.getAvatar());
-        user.setFirstName(request.getFirstName());
-        user.setLastName(request.getLastName());
-        user.setEmail(request.getEmail());
-        user.setRole(request.getRole());
+    public ApiResponse updateByUser(User user, UserDto dto) {
+        user.setFirstName(dto.getFirstName());
+        user.setLastName(dto.getLastName());
         repo.save(user);
 
-        return new ApiResponse("Updated successfully User with ID: " + userId);
+        return new ApiResponse("Updated user successfully");
     }
 
     @Override
-    public ApiResponse updateAvatar(User user, MultipartFile avatar) {
-        String msg = "Update avatar failed";
-        if (avatar != null) {
-            String fileName = StringUtils.cleanPath(Objects.requireNonNull(avatar.getOriginalFilename()));
-            user.setAvatar(fileName);
-            repo.save(user);
-            String uploadDir = FileEnv.IMAGE_PATH;
-            fileUtils.saveImage(uploadDir, fileName, avatar);
+    public Map<String, Object> updateAvatar(Principal principal, MultipartFile avatar) {
+        User user = getByPrincipal(principal);
+        if (avatar == null) {
+            throw new InvalidException("Avatar is null");
         }
-        return new ApiResponse(msg);
+        String fileName = StringUtils.cleanPath(Objects.requireNonNull(avatar.getOriginalFilename()));
+        user.setAvatar(fileName);
+        repo.save(user);
+        String uploadDir = imagePath;
+        FileUtils.saveImage(uploadDir, fileName, avatar);
+        return new HashMap<>() {{
+            put("avatar", fileName);
+        }};
     }
 
     @Override
-    public ApiResponse updateEmail(Principal principal, EmailRequest request) {
-        if (repo.existsByEmail(request.getEmail())) {
-            throw new ExistsException("Email already in use: " + request.getEmail());
+    public ApiResponse updateEmail(Principal principal, EmailDto dto) {
+        if (repo.existsByEmail(dto.getEmail())) {
+            throw new ExistsException("Email already in use: " + dto.getEmail());
         }
-        User user = get(principal);
-        user.setEmail(request.getEmail());
+        User user = getByPrincipal(principal);
+        user.setEmail(dto.getEmail());
         repo.save(user);
 
         return new ApiResponse("Updated email successfully");
     }
 
     @Override
-    public ApiResponse updatePassword(Principal principal, PasswordUpdateRequest request) {
-        User user = get(principal);
+    public ApiResponse updatePassword(Principal principal, PasswordUpdateDTO request) {
+        User user = getByPrincipal(principal);
 
         if (!passwordEncoder.matches(request.getOldPassword(), user.getPassword())) {
             throw new InvalidException("Incorrect password");
@@ -119,33 +127,13 @@ public class UserServiceImpl implements UserService {
         user.setPassword(passwordEncoder.encode(request.getNewPassword()));
         repo.save(user);
 
-        return new ApiResponse("Updated password successfully !!");
+        return new ApiResponse("Updated password successfully");
     }
 
     @Override
-    public ApiResponse delete(int userId) {
+    public ApiResponse deleteById(int userId) {
         repo.deleteById(userId);
-        return new ApiResponse("Deleted successfully User with ID: " + userId);
-    }
-
-    @Override
-    public UserResponse mapEntityToDto(User user) {
-        return UserResponse.builder()
-                .id(user.getId())
-                .avatar(user.getAvatar())
-                .firstName(user.getFirstName())
-                .lastName(user.getLastName())
-                .email(user.getEmail())
-                .phoneNumber(user.getPhone())
-                .role(user.getRole())
-                .build();
-    }
-
-    @Override
-    public List<UserResponse> mapEntityToDto(List<User> users) {
-        return users.stream()
-                .map(this::mapEntityToDto)
-                .collect(Collectors.toList());
+        return new ApiResponse("Deleted user successfully");
     }
 
 }
